[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/exo.regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/debug_hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 1 )

[node name="DebugHUD" type="Node2D"]
script = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="LapNum" type="Label" parent="Canvas"]
margin_right = 115.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "Lap: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapTime" type="Label" parent="Canvas"]
margin_left = 160.0
margin_top = 55.0
margin_right = 419.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapTimeText" type="Label" parent="Canvas"]
margin_top = 55.0
margin_right = 259.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 1 )
text = "Lap Time:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestLap" type="Label" parent="Canvas"]
margin_top = 110.0
margin_right = 259.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "Best Lap:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="Label" parent="Canvas"]
margin_left = 750.0
margin_top = 1035.0
margin_right = 865.0
margin_bottom = 1070.0
custom_fonts/font = SubResource( 1 )
text = "10 MPH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gear" type="Label" parent="Canvas"]
margin_left = 908.0
margin_top = 1035.0
margin_right = 1012.0
margin_bottom = 1070.0
custom_fonts/font = SubResource( 1 )
text = "Gear: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RPM" type="Label" parent="Canvas"]
margin_left = 1055.0
margin_top = 1035.0
margin_right = 1234.0
margin_bottom = 1070.0
custom_fonts/font = SubResource( 1 )
text = "RPM: 8000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="Canvas"]
margin_left = 830.531
margin_top = 20.9046
margin_right = 1089.53
margin_bottom = 55.9046
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
